[package]
name = "stm32-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "stm32f103c8",
] }
embassy-time = "0.4.0"
i2c-character-display = "0.4"
# onewire = { git = "https://github.com/rkuris/onewire.git" }
panic-probe = "1.0.0"
# arrayvec = { version = "0.7.6", default-features = false }
itoa = "1.0.15"

[profile.release]
strip = true
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
