[package]
name = "stm32-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "stm32f103c8",
] }
embassy-time = "0.4.0"
embedded-graphics = "0.8.1"
heapless = "0.9.1"
panic-probe = "1.0.0"
ssd1306 = "0.10.0"

[profile.release]
strip = true
lto = "fat"
opt-level = "s"
debug = false
overflow-checks = false
